Added a mechanism for commands to print their own help messages